fix(mobile): remove VisibleArea padding for mobiles

--- a/src/apps/MP3Player/MP3Player.module.scss
+++ b/src/apps/MP3Player/MP3Player.module.scss
@@ -26,6 +26,7 @@ $footerHeight: 7.7rem;
 
 .player {
   font-family: $fontFamily;
+  font-size: 1.4rem;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -41,10 +42,4 @@ $footerHeight: 7.7rem;
 
 .sidebar {
   flex: 0 0 auto;
-}
-
-@media only screen and (min-width: $mobileBreakpoint + 0.1px) {
-  .player {
-    font-size: 1.4rem;
-  }
 }
