--- a/src/platform/components/Desktop/components/VisibleArea/VisibleArea.module.scss
+++ b/src/platform/components/Desktop/components/VisibleArea/VisibleArea.module.scss
@@ -5,5 +5,16 @@
   flex-basis: auto;
   flex-grow: 1;
   flex-shrink: 1;
-  margin: $spacingXs $spacingXs $spacingXs 0;
+}
+
+@media only screen and (max-width: $mobileBreakpoint) {
+  .visibleArea {
+    margin: 0;
+  }
+}
+
+@media only screen and (min-width: $mobileBreakpoint + 0.1px) {
+  .visibleArea {
+    margin: $spacingXs $spacingXs $spacingXs 0;
+  }
 }
